<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Verfluchter Android</string>
    <string name="fillServerUrlPlease">Verfluchter server URL:</string>
    <string name="serverURL">verfluchter.xsolve.pl</string>

    <!-- menu strings etc -->
    <string name="settings_menu_label">Ustawienia</string>
    <string name="settings_menu_shortcut">U</string>
    <string name="main_menu_label">Home</string>
    <string name="main_menu_shortcut">H</string>
    <string name="about_menu_label">About</string>
    <string name="about_menu_shortcut">A</string>

    <string name="continue_working_button">Pracuj dalej</string>
    <string name="stop_working_button">Zakończ pracę na dziś</string>

    <string name="domain_edit_label">Verfluchter domain</string>
    <string name="domain_edittext_hint">verfluchter.company.com</string>
    <string name="basic_login_edit_label">Basic Auth login:</string>
    <string name="basic_password_edit_label">Basic Auth password:</string>
    <string name="login_edit_label">Verfluchter login:</string>
    <string name="password_edit_label">Verfluchter password:</string>
    <string name="timer_service_check_text">Przypominaj mi o końcu pracy</string>
    <string name="refresher_service_check_text">Automatycznie aktualizuj dane (co 10min)</string>
    <string name="login_edittext_hint">Login</string>
    <string name="password_edittext_hint">Password</string>
    <string name="save_settings_button_text">Zapisz ustawienia</string>
    <string name="https">https://</string>

    <string name="about_text">
        <![CDATA[
        Author: Konrad Malawski<br/>
        Email: konrad.malawski@_<br/>
        (<a href="http://java.pl">java.pl</a> | <a href="xsolve.pl">xsolve.pl</a> | <a href="http://project13.pl">project13.pl</a>)<br/>
        <p>
            This app was written in order to ease my life by handling all the stuff concerned with logging my work time at
            work.<br/>
            The webapp I\'m connecting to doesn\'t have any REST interface, and I\'m basically just interacting with an
            simple website - that said, it works really quite well... ;-)
        </p>
        <p>
            The source of this program is available on the <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GNU GPLv3</a> license and can be downloaded from: <br/>
            <a href="http://www.github.com/ktoso/verfluchter-android">github.com/ktoso/verfluchter-android</a>
        </p>
        ]]>
    </string>

    <string name="startWork_button_text">Rozpocznij pracę</string>
    <string name="endWork_button_text">Zakończ pracę</string>

    <string name="workedTodayLabel">Przepracowałeś dzisiaj:</string>
    <string name="workedYesterdayLabel">Wczoraj przepracowałeś:</string>
    <string name="workedLastTimeLabel">Ostatnio przepracowałeś:</string>

    <string name="dailyHoursLabel">Dziennie</string>
    <string name="weeklyHoursLabel">Tygodniowo</string>
    <string name="monthlyHoursLabel">Miesięcznie</string>
    <string name="footerCopy">XSolve 2010; GNU GPLv3</string>

    <string name="refresh_service_started">Refresh service started</string>
    <string name="refresh_service_stopped">Refresh service stopped</string>
    <string name="refresh_service_label">Refresh Service</string>
    <string name="refresh_service_connected">Refresh service connected</string>
    <string name="refresh_service_disconnected">Refresh service disconnected</string>

    <string name="hey_stop_working_title">Już możesz przestać pracować :-)</string>
    <string name="working_hour_start_label">O której godzinie rozpoczynasz pracę?</string>
    <string name="working_hour_end_label">Po której godzinie kończysz pracę?</string>

    <string name="am_i_working_yes">Pracuję</string>
    <string name="am_i_working_no">Nie pracuję :-)</string>

    <string name="today">Dzisiaj</string>
    <string name="use_sound_checkbox_text">Odtwórz dźwięk po aktualizacji notyfikacji</string>

    <!-- notification messages for statuses -->
    <string name="NOT_YET_WORKING_TITLE">Jeszcze nie musisz pracować</string>
    <string name="NOT_YET_WORKING_TEXT">Jeszcze nie musisz pracować.</string>
    <string name="YOU_SHOULD_START_WORKING_TITLE">Powinieneś już zacząć pracę.</string>
    <string name="YOU_SHOULD_START_WORKING_TEXT">Powinieneś już zacząć pracę.</string>
    <string name="WORKING_TITLE">Pracujesz obecnie.</string>
    <string name="WORKING_TEXT">Pracujesz obecnie.</string>
    <string name="YOU_SHOULD_STILL_BE_WORKING_TITLE">Powinieneś nadal pracować.</string>
    <string name="YOU_SHOULD_STILL_BE_WORKING_TEXT">Powinieneś nadal pracować.</string>
    <string name="YOU_CAN_STOP_WORKING_TITLE">Możesz już wyjść z pracy.</string>
    <string name="YOU_CAN_STOP_WORKING_TEXT">Możesz już wyjść z pracy.</string>
    <string name="NOT_WORKING_TITLE">Nie pracujesz obecnie.</string>
    <string name="NOT_WORKING_TEXT">Nie pracujesz obecnie.</string>
    <string name="activated_work_time_check_service">Uaktywniono serwis powiadamiania o przekroczonym czasie pracy.
    </string>
    <string name="deactivated_work_time_check_service">Wyłączono serwis powiadamiania o przekroczonym czasie pracy.
    </string>

    <string name="invalidWorkTimeRange">Zakres czasów pracy nie jest poprawny.</string>

</resources>
