<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/main_menu_item"
          android:icon="@android:drawable/ic_menu_view"
          android:title="@string/main_menu_label"
          android:alphabeticShortcut="@string/main_menu_shortcut"
            />

    <item android:id="@+id/settings_menu_item"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/settings_menu_label"
          android:alphabeticShortcut="@string/settings_menu_shortcut"
            />

    <item android:id="@+id/about_menu_item"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/about_menu_label"
          android:alphabeticShortcut="@string/about_menu_shortcut"
            />
</menu>