<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
        >

    <ImageView android:src="@drawable/verfluchter"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_gravity="center_horizontal"
               android:focusable="false"
               android:clickable="false"
            />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:background="@color/white"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:gravity="center"
                  android:layout_gravity="center"
                  android:orientation="horizontal">
        <Button android:id="@+id/start_work_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/startWork_button_text"
                />
        <Button android:id="@+id/stop_work_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/endWork_button_text"
                />
        <ImageButton android:id="@+id/refresh_button"
                     android:src="@drawable/ic_menu_refresh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_gravity="center"
                />
    </LinearLayout>

    <TextView android:id="@+id/work_time_today_label"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_gravity="center"
              android:text="@string/workedTodayLabel"
              style="@style/simpleBlackText"
            />
    <TextView android:id="@+id/work_time_today"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_gravity="center"
              android:text="0h 0m"
              style="@style/work_time_today"
            />

    <TextView android:id="@+id/currently_working_textview"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_gravity="center"
              style="@style/currently_working"
            />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">
        <TextView android:id="@+id/hours_stats_textview"
                  style="@style/simpleBlackText"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                />
    </ScrollView>

    <!--<TextView-->
    <!--style="@style/simpleBlackText"-->
    <!--android:id="@+id/footer"-->
    <!--android:gravity="center_horizontal|bottom"-->
    <!--android:layout_gravity="center_horizontal|bottom"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/footerCopy"-->
    <!--/>-->

</LinearLayout>
